welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:10: error: not found: value GetCouleurSol
    T(compt)=GetCouleurSol()
             ^